--- a/common/components/_navbar.scss
+++ b/common/components/_navbar.scss
@@ -10,7 +10,6 @@
   100% {
     opacity: 1;
     transform: translateY(0);
-    visibility: visible;
   }
 }
 
@@ -23,8 +22,8 @@
   flex: 100%;
   position: relative;
   padding: 20px 20px 3em 20px;
-  visibility: hidden;
   z-index: 3;
+  opacity: 0;
 
   &__brand {
     font-family: "Noto Serif SC", serif;
