--- a/common/pages/_about.scss
+++ b/common/pages/_about.scss
@@ -74,11 +74,15 @@
   }
 
   &__hero {
+    animation: slideUp 1000ms ease var(--delay);
+    -webkit-animation: slideUp 1000ms ease var(--delay);
+    -moz-animation: slideUp 1000ms ease var(--delay);
     height: auto;
     position: relative;
     transform: translateY(0px);
     -webkit-transform: translateY(0px);
     -moz-transform: translateY(0px);
+    opacity: 1;
 
     @include mixin.horizontalTablet {
       max-width: 450px;
